[gd_scene load_steps=10 format=3 uid="uid://c8hxxf4k6qyg"]

[ext_resource type="Script" path="res://ui/settings.gd" id="1_3p4tw"]
[ext_resource type="Theme" uid="uid://dlxgcekwp6ob" path="res://ui/shop.tres" id="2_0aedm"]
[ext_resource type="Script" path="res://ui/line_edit.gd" id="2_i6ldk"]
[ext_resource type="Script" path="res://ui/line_edit_ability_1.gd" id="3_fouca"]
[ext_resource type="Script" path="res://ui/line_edit_ability_2.gd" id="4_0f164"]

[sub_resource type="Animation" id="Animation_7ku6k"]
resource_name = "visible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vgnxt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_guw5n"]
resource_name = "invisible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6mava"]
_data = {
"RESET": SubResource("Animation_vgnxt"),
"invisible": SubResource("Animation_guw5n"),
"visible": SubResource("Animation_7ku6k")
}

[node name="Settings" type="CanvasLayer"]
scale = Vector2(1.00286, 1)
transform = Transform2D(1.00286, 0, 0, 1, 0, 0)
script = ExtResource("1_3p4tw")

[node name="MenuBar" type="MenuBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.96)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuBar/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuBar/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Right"

[node name="LineEdit" type="LineEdit" parent="MenuBar/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "D"
script = ExtResource("2_i6ldk")
action_name = "right"

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuBar/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuBar/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Jump
"

[node name="LineEdit" type="LineEdit" parent="MenuBar/VBoxContainer/HBoxContainer2"]
layout_mode = 2
placeholder_text = "W"
script = ExtResource("2_i6ldk")
action_name = "jump"

[node name="HBoxContainer4" type="HBoxContainer" parent="MenuBar/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuBar/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Left"

[node name="LineEdit" type="LineEdit" parent="MenuBar/VBoxContainer/HBoxContainer4"]
layout_mode = 2
placeholder_text = "A"
script = ExtResource("2_i6ldk")
action_name = "left"

[node name="HBoxContainer3" type="HBoxContainer" parent="MenuBar/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuBar/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Attack"

[node name="LineEdit" type="LineEdit" parent="MenuBar/VBoxContainer/HBoxContainer3"]
layout_mode = 2
placeholder_text = "Space"
script = ExtResource("2_i6ldk")
action_name = "attack"

[node name="HBoxContainer5" type="HBoxContainer" parent="MenuBar/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuBar/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Ability 1"

[node name="LineEdit_Ability1" type="LineEdit" parent="MenuBar/VBoxContainer/HBoxContainer5"]
layout_mode = 2
placeholder_text = "E"
script = ExtResource("3_fouca")

[node name="HBoxContainer6" type="HBoxContainer" parent="MenuBar/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuBar/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Ability 2"

[node name="LineEdit_Ability2" type="LineEdit" parent="MenuBar/VBoxContainer/HBoxContainer6"]
layout_mode = 2
placeholder_text = "R"
script = ExtResource("4_0f164")

[node name="Button" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 43.0
grow_horizontal = 0
scale = Vector2(1.02131, 0.979784)
theme = ExtResource("2_0aedm")
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6mava")
}
autoplay = "invisible"

[connection signal="focus_entered" from="MenuBar/VBoxContainer/HBoxContainer/LineEdit" to="MenuBar/VBoxContainer/HBoxContainer/LineEdit" method="_on_focus_entered"]
[connection signal="focus_exited" from="MenuBar/VBoxContainer/HBoxContainer/LineEdit" to="MenuBar/VBoxContainer/HBoxContainer/LineEdit" method="_on_focus_exited"]
[connection signal="focus_entered" from="MenuBar/VBoxContainer/HBoxContainer2/LineEdit" to="MenuBar/VBoxContainer/HBoxContainer2/LineEdit" method="_on_focus_entered"]
[connection signal="focus_exited" from="MenuBar/VBoxContainer/HBoxContainer2/LineEdit" to="MenuBar/VBoxContainer/HBoxContainer2/LineEdit" method="_on_focus_exited"]
[connection signal="focus_entered" from="MenuBar/VBoxContainer/HBoxContainer4/LineEdit" to="MenuBar/VBoxContainer/HBoxContainer4/LineEdit" method="_on_focus_entered"]
[connection signal="focus_exited" from="MenuBar/VBoxContainer/HBoxContainer4/LineEdit" to="MenuBar/VBoxContainer/HBoxContainer4/LineEdit" method="_on_focus_exited"]
[connection signal="focus_entered" from="MenuBar/VBoxContainer/HBoxContainer3/LineEdit" to="MenuBar/VBoxContainer/HBoxContainer3/LineEdit" method="_on_focus_entered"]
[connection signal="focus_exited" from="MenuBar/VBoxContainer/HBoxContainer3/LineEdit" to="MenuBar/VBoxContainer/HBoxContainer3/LineEdit" method="_on_focus_exited"]
[connection signal="focus_entered" from="MenuBar/VBoxContainer/HBoxContainer5/LineEdit_Ability1" to="MenuBar/VBoxContainer/HBoxContainer5/LineEdit_Ability1" method="_on_focus_entered"]
[connection signal="focus_exited" from="MenuBar/VBoxContainer/HBoxContainer5/LineEdit_Ability1" to="MenuBar/VBoxContainer/HBoxContainer5/LineEdit_Ability1" method="_on_focus_exited"]
[connection signal="focus_entered" from="MenuBar/VBoxContainer/HBoxContainer6/LineEdit_Ability2" to="MenuBar/VBoxContainer/HBoxContainer6/LineEdit_Ability2" method="_on_focus_entered"]
[connection signal="focus_exited" from="MenuBar/VBoxContainer/HBoxContainer6/LineEdit_Ability2" to="MenuBar/VBoxContainer/HBoxContainer6/LineEdit_Ability2" method="_on_focus_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
